chore: Update various packages (#561)