@@ -5,7 +5,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.1.2'
         classpath 'com.github.bjoernq:unmockplugin:0.7.9'
     }
 }
@@ -14,7 +14,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'de.mobilej.unmock'
 
 android {
-    compileSdkVersion 30
+    compileSdk 30
     defaultConfig {
         applicationId 'io.appium.uiautomator2'
         minSdkVersion 21
@@ -50,7 +50,23 @@ android {
         }
     }
     testOptions {
-        unitTests.returnDefaultValues = true
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+            all {
+                it.jvmArgs([
+                        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.time.format=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+                        '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                        '--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED',
+                ])
+            }
+        }
     }
     packagingOptions {
         resources {
@@ -76,7 +92,7 @@ dependencies {
     implementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     implementation 'androidx.test:core:1.4.0'
     implementation 'androidx.test:runner:1.4.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.10.1'
     //noinspection GradleDependency
     implementation 'commons-io:commons-io:2.6'
     implementation 'io.netty:netty-all:4.0.41.Final'
@@ -86,7 +102,6 @@ dependencies {
     implementation 'com.github.vbmacher:java-cup-runtime:11b-20160615-1'
     //noinspection GradleDependency
     implementation 'com.ibm.icu:icu4j:60.2'
-    unmock 'org.robolectric:android-all:7.1.0_r7-robolectric-0'
     testImplementation 'androidx.test.ext:junit:1.1.3'
     //noinspection GradleDependency
     testImplementation 'junit:junit:4.12'
@@ -95,7 +110,7 @@ dependencies {
     testImplementation 'org.powermock:powermock-classloading-xstream:2.0.9'
     testImplementation 'org.powermock:powermock-module-junit4-rule:2.0.9'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
-    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'org.robolectric:robolectric:4.10.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'com.squareup.okhttp:okhttp:2.7.5'
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.4.0'
